--- a/package.json
+++ b/package.json
@@ -9,13 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.2",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "20.6.4",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "antd": "^5.10.2",
+    "autoprefixer": "10.4.16",
+    "axios": "^1.5.0",
+    "comma-number": "^2.1.0",
+    "firebase": "^8.10.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
+    "jspdf-autotable": "^3.7.0",
+    "naivebayes": "^0.5.0",
+    "next": "13.5.2",
+    "postcss": "8.4.30",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
+    "react-speech-recognition": "^3.10.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "sentiment": "^5.0.2",
+    "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.28",
+    "tailwindcss": "3.3.3",
+    "xlsx": "^0.18.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "@types/react-speech-recognition": "^3.9.2"
   }
 }
