--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.5.0",
     "comma-number": "^2.1.0",
     "firebase": "^8.10.0",
+    "flutterwave-react-v3": "^1.3.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "jspdf-autotable": "^3.7.0",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
